fixed overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -93,6 +93,7 @@ body {
   position: relative;
   z-index: 3;
   padding-top: 10px;
+  overflow: hidden;
 }
 
 #cursor-container {
